--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Navbar from '../components/Navbar/Navbar.astro'
+import '@fontsource/parisienne';
 interface Props {
   title: string
 }
@@ -10,42 +12,70 @@ const { title } = Astro.props
 <html lang='en'>
   <head>
     <meta charset='UTF-8' />
-    <meta name='description' content='Astro description' />
+    <meta name='description' content='DeCocco web portfolio' />
     <meta name='viewport' content='width=device-width' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={Astro.generator} />
+    <link rel='icon' type='image/jpeg' href='/assets/myself.jpeg' />
     <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <header>
+      <Navbar />
+    </header>
+    <aside>aside</aside>
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
 <style is:global>
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
+  * {
+    box-sizing: border-box !important;
   }
   html {
+    background: #24272b;
     font-family: system-ui, sans-serif;
-    background: #13151a;
-    background-size: 224px;
   }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
+  body {
+    display: grid;
+    grid-template-areas:
+      "head head"
+      "side content";
+    grid-template-columns: 120px 1fr;
+    grid-template-rows: 120px 1fr;
+    height: 100vh;
+    margin: 0;
+
+    @media (width < 768px) {
+      grid-template-columns: 1fr;
+      grid-template-rows: 80px 1fr 80px;
+      grid-template-areas:
+        "head"
+        "content"
+        "side";
+    }
+  }
+  header {
+    grid-area: head;
+    padding-left: 16px;
+    padding-right: 32px;
+    @media (width < 768px) {
+      padding-inline: 0px;
+    }
+  }
+  aside {
+    grid-area: side;
+  }
+  main {
+    grid-area: content;
+    border-top: 2px solid white;
+    border-left: 2px solid white;
+    border-top-left-radius: 12px;
+    @media (width < 768px) {
+      border-bottom: 2px solid white;
+      border-left: unset;
+      border-top-left-radius: unset;
+      margin-inline: 20px;
+    }
   }
 </style>
