--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="DeCocco's Portfolio">
-HOME
+<Layout title="DeCocco's Blog">
+Blog
 </Layout>
 
