--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,12 @@
 ---
 import Navbar from '../components/Navbar/Navbar.astro'
 import '@fontsource/parisienne';
+import '@fontsource/lato/100.css';
+import '@fontsource/lato/300.css';
+import '@fontsource/lato/400.css';
+import '@fontsource/lato/700.css';
+import '@fontsource/lato/900.css';
+
 interface Props {
   title: string
 }
@@ -33,8 +39,10 @@ const { title } = Astro.props
     box-sizing: border-box !important;
   }
   html {
-    background: #24272b;
-    font-family: system-ui, sans-serif;
+    background: var(--colors-primary);
+    font-family: 'Lato', sans-serif;
+    --colors-primary: #131416;
+    --colors-gray1: #444444;
   }
   body {
     display: grid;
