--- a/src/components/Navbar/Logo.astro
+++ b/src/components/Navbar/Logo.astro
@@ -32,7 +32,7 @@
   }
   a {
     font-family: Parisienne;
-    color:#fff;
+    color: var(--colors-white);
     text-decoration: none;
   }
 </style>
