--- a/src/components/Navbar/Navbar.astro
+++ b/src/components/Navbar/Navbar.astro
@@ -12,7 +12,7 @@ import NavbarOption from "./NavbarOption.astro";
       <NavbarOption href="/about" text="about" />
       <NavbarOption href="/projects" text="projects" />
     </div>
-    <svg width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <svg width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke=var(--colors-white) fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <path d="M4 6l16 0" />
       <path d="M4 12l16 0" />
