--- a/src/components/Navbar/Logo.astro
+++ b/src/components/Navbar/Logo.astro
@@ -11,7 +11,7 @@
 
   .container {
     border: 3px solid;
-    border-color: white;
+    border-color: var(--colors-white);
     border-radius: 100px;
     cursor: pointer;
     font-size: 40px;
@@ -19,7 +19,7 @@
     transform: rotate(-7deg);
     @media (width < 768px) {
       border: 2px solid;
-      border-color: white;
+      border-color: var(--colors-white);
       font-size: 28px;
     }
   }
