🩹 fix: use blank target on social icons

--- a/src/components/Aside/Aside.astro
+++ b/src/components/Aside/Aside.astro
@@ -1,15 +1,15 @@
 
 <div class="container">
-  <a href="https://github.com/decocco">
+  <a href="https://github.com/decocco" target="_blank">
     <i id="github" class="fa-brands fa-github" />
   </a>
-  <a href="https://www.instagram.com/de__cocco">
+  <a href="https://www.instagram.com/de__cocco" target="_blank">
     <i id="instagram" class="fa-brands fa-instagram" />
   </a>
-  <a href="https://www.linkedin.com/in/jeremy-galarce-urbina-96590114b/">
+  <a href="https://www.linkedin.com/in/jeremy-galarce-urbina-96590114b/" target="_blank">
     <i id="linkedin" class="fa-brands fa-linkedin" />
   </a>
-  <a href="mailto:jeremy.galarce.u@gmail.com">
+  <a href="mailto:jeremy.galarce.u@gmail.com" target="_blank">
     <i id="mail" class="fa-solid fa-envelope" />
   </a>
 </div>
