🩹 feat: main content scrollable

--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -1,6 +1,6 @@
 ---
-import Logo from "./Logo.astro";
-import NavbarOption from "./NavbarOption.astro";
+import Logo from "../components/Navbar/Logo.astro";
+import NavbarOption from "../components/Navbar/NavbarOption.astro";
 ---
 
 <section class="nav">
