--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import Navbar from '../components/Navbar/Navbar.astro'
-import Aside from '../components/Aside/Aside.astro';
+import Navbar from './Navbar.astro'
+import Aside from './Aside.astro';
 import '@fontsource/parisienne';
 import '@fontsource/lato/100.css';
 import '@fontsource/lato/300.css';
@@ -83,10 +83,11 @@ const { title } = Astro.props
     grid-area: side;
   }
   main {
-    grid-area: content;
     border-top: 2px solid var(--colors-white);
     border-left: 2px solid var(--colors-white);
     border-top-left-radius: 12px;
+    grid-area: content;
+    overflow: scroll;
     @media (width < 768px) {
       border-bottom: 2px solid var(--colors-white);
       border-left: unset;
