--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,18 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Myself from '../components/About/Myself.astro'
+import Studies from '../components/About/Studies.astro'
+import Techs from '../components/About/Techs.astro'
 ---
 
 <Layout title="DeCocco's About">
-ABOUT
+  <Myself />
+  <Techs />
+  <Studies />
+  <a href="../../public/assets/CV_Jeremy_Galarce.pdf"
+    download
+  >
+  GET MY CV
+  </a>
 </Layout>
 
