🩹 feat: welcome image in home screen

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,10 +47,12 @@ const { title } = Astro.props
     font-family: 'Lato', sans-serif;
     --colors-black: #000000;
     --colors-gray1: #444444;
-    --colors-primary: #c7d0e0;
-    --colors-red: #E1306C;
-    --colors-skyblue:#0177B5;
+    --colors-gray2: #2a2828;
+    --colors-primary: #b1c7c7;
+    --colors-instagram: #E1306C;
+    --colors-linkedin:#0177B5;
     --colors-white: #ffffff;
+    --colors-white2: #e3e3e3;
   }
   body {
     display: grid;
