--- a/src/layouts/Aside.astro
+++ b/src/layouts/Aside.astro
@@ -51,10 +51,10 @@
       color: var(--colors-black);
     }
     &#instagram:hover {
-      color: var(--colors-red);
+      color: var(--colors-instagram);
     }
     &#linkedin:hover {
-      color: var(--colors-skyblue);
+      color: var(--colors-linkedin);
     }
     &#mail:hover {
       color: var(--colors-white);
