--- a/src/components/Home/WelcomeImage.astro
+++ b/src/components/Home/WelcomeImage.astro
@@ -19,7 +19,9 @@
     border-radius: 50%;
     height: 500px;
     overflow: hidden;
-    padding: 40px 70px
+    padding: 40px 70px;
+    text-align: center;
+    width: 400px;
   }
   img {
     filter: grayscale(100%);
