📱 feat: responsive home screen

--- a/src/layouts/Aside.astro
+++ b/src/layouts/Aside.astro
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="aside-container">
   <a href="https://github.com/decocco" target="_blank">
     <i id="github" class="fa-brands fa-github" />
   </a>
@@ -15,7 +15,7 @@
 </div>
 
 <style>
-  .container {
+  .aside-container {
     color: var(--colors-gray1);
     display: flex;
     flex-direction: column;
