--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,14 +42,12 @@ const { title } = Astro.props
   html {
     background: var(--colors-primary);
     font-family: 'Lato', sans-serif;
-    --colors-black: #000000;
-    --colors-gray1: #444444;
-    --colors-gray2: #2a2828;
-    --colors-primary: #b1c7c7;
+    --colors-black: #2b2824;
+    --colors-gray1: #56494C;
+    --colors-primary: #AFBFC0;
     --colors-instagram: #E1306C;
-    --colors-linkedin:#0177B5;
-    --colors-white: #ffffff;
-    --colors-white2: #e3e3e3;
+    --colors-linkedin: #0177B5;
+    --colors-white: #E8F7EE;
   }
   body {
     display: grid;
