--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,13 +6,13 @@ import Techs from '../components/About/Techs.astro'
 ---
 
 <Layout title="DeCocco's About">
-  <Myself />
+  <!-- <Myself />
   <Techs />
   <Studies />
   <a href="../../public/assets/CV_Jeremy_Galarce.pdf"
     download
   >
   GET MY CV
-  </a>
+  </a> -->
 </Layout>
 
