--- a/src/components/Home/WelcomeImage.astro
+++ b/src/components/Home/WelcomeImage.astro
@@ -1,30 +1,56 @@
-<div class="internal-circle">
-  <div class="img-container">
-    <img 
-      alt="A picture of jeremy looking at the horizon"
+<div class="welcome-container">
+  <div class="welcome-img-container">
+    <img
+      alt="A picture of Jeremy looking the horizon"
       src="../../../public/assets/myself2.png"
     >
   </div>
 </div>
 
 <style>
-  .internal-circle {
-    border: 3px solid var(--colors-white2);
-    border-radius: 50%;
-    padding: 20px
-  }
-
-  .img-container {
-    background-color: var(--colors-gray2);
-    border-radius: 50%;
-    height: 500px;
-    overflow: hidden;
-    padding: 40px 70px;
-    text-align: center;
-    width: 400px;
-  }
   img {
-    filter: grayscale(100%);
-    height: inherit;
+    filter: grayscale(95%);
+    scale: 1;
+    @media (width < 768px) {
+      bottom: 0;
+      position: absolute;
+      scale: 1.1;
+    }
+  }
+  .welcome-container {
+    align-items: center;
+    display: flex;
+    flex: 1;
+    height: 100%;
+    justify-content: center;
+    max-width: 725px;
+    min-width: 695px;
+    width: 100%;
+    @media (width < 768px) {
+      position: absolute;
+      z-index: -1;
+    }
+  }
+  .welcome-img-container {
+    align-items: center;
+    background-color: var(--colors-gray1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    height: 70vh;
+    width: 70vh;
+    position: relative;
+    overflow: hidden;
+    z-index: -1;
+
+    @media (width < 768px) {
+      border-radius: 0;
+      height: 100%;
+      padding: 0;
+      position: absolute;
+      margin: 0;
+      width: 100%;
+      z-index: -1;
+    }
   }
 </style>
