--- a/src/components/Navbar/Logo.astro
+++ b/src/components/Navbar/Logo.astro
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="logo-container">
   <a href="/">DeCocco</a>
 </div>
 
@@ -9,7 +9,7 @@
     100% { transform: rotate(-7deg); }
   }
 
-  .container {
+  .logo-container {
     border: 3px solid;
     border-color: var(--colors-white);
     border-radius: 100px;
