--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -26,7 +26,6 @@ import NavbarOption from "../components/Navbar/NavbarOption.astro";
   display: flex;
   height: 100%;
   justify-content: space-between;
-  width: 100%;
   position: relative;
   @media (width < 768px) {
       margin-left: 20px;
@@ -61,7 +60,7 @@ import NavbarOption from "../components/Navbar/NavbarOption.astro";
     font-size: 20px;
   }
   .nav-links {
-    background-color: #333;
+    background-color: var(--colors-black);
     display: flex;
     flex-direction: column;
     left: 0px;
