--- a/src/components/Navbar/Logo.astro
+++ b/src/components/Navbar/Logo.astro
@@ -17,7 +17,7 @@
     font-size: 40px;
     padding-inline: 10px;
     transform: rotate(-7deg);
-    @media (width < 768px) {
+    @media (max-width: 768px) {
       border: 2px solid;
       border-color: var(--colors-white);
       font-size: 28px;
