--- a/src/layouts/Aside.astro
+++ b/src/layouts/Aside.astro
@@ -27,7 +27,7 @@
     width: 100%;
     
 
-    @media (width < 768px) {
+    @media (max-width: 768px) {
       font-size: 30px;
       flex-direction: row;
     }
