--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -27,7 +27,7 @@ import NavbarOption from "../components/Navbar/NavbarOption.astro";
   height: 100%;
   justify-content: space-between;
   position: relative;
-  @media (width < 768px) {
+  @media (max-width: 768px) {
       margin-left: 20px;
     }
 }
